# baby_care_app

./: .gitignore  .pre-commit-config.yaml  Dockerfile  baby_care_app.db  database.py  docker-compose.yml  main.py  models.py  pyproject.toml
app/: database.py  main.py  models.py
app/routers/: enum.py  event.py  kid.py  kid_permission.py  parent.py
routers/: enum.py  event.py  event_type.py  kid.py  kid_permission.py  parent.py
templates/: base.html  create_event.html  create_kid.html  create_parent.html
