[tool.poetry]
name = "baby-care-app"
version = "0.1.0"
description = ""
authors = ["mateusz <mateusz@geew.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
ruff = "^0.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
