[tool.poetry]
name = "baby-care-app"
version = "0.1.0"
description = ""
authors = ["mateusz <mateusz@geew.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
ruff = "^0.8.3"
sqlalchemy = "^2.0.36"
pydantic = "^2.10.4"
pre-commit = "^4.0.1"
uvicorn = "^0.34.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
